# comfyui-simswap

./: README.md  install.py  nodes.py  pyproject.toml  simswap_log_patch.py  simswap_utils.py
scripts/: simswap_faceswap.py  simswap_logger.py  simswap_swapper.py  simswap_version.py
scripts/insightface_func/: face_detect_crop_single.py
scripts/r_masking/: subcore.py
scripts/simswap/models/: models.py  pix2pixHD_model.py  ui_model.py
scripts/simswap/options/: base_options.py  test_options.py
scripts/simswap/simswap_util/: reverse2original.py
